[gd_scene load_steps=12 format=3 uid="uid://css1s6tdoshkk"]

[ext_resource type="PackedScene" uid="uid://c27h1wxrg68p0" path="res://scenes/levels/level.tscn" id="1_ctrng"]
[ext_resource type="Script" path="res://scenes/levels/level_2.gd" id="2_an1c6"]
[ext_resource type="Texture2D" uid="uid://dcgabyfr3uopm" path="res://assets/Platformer Art Complete Pack/Base pack/Items/plant.png" id="2_y3mc7"]
[ext_resource type="TileSet" uid="uid://bmm5d23ui042c" path="res://base_pack.tres" id="3_bopwk"]
[ext_resource type="Texture2D" uid="uid://csmo6p4ghbsve" path="res://assets/Platformer Art Complete Pack/Base pack/Tiles/tochLit2.png" id="4_210nj"]
[ext_resource type="PackedScene" uid="uid://d0wis22cen4o3" path="res://scenes/objects/door.tscn" id="4_j0ywj"]
[ext_resource type="Texture2D" uid="uid://euv1l5ba0ps2" path="res://assets/Platformer Art Complete Pack/Base pack/Items/plantPurple.png" id="5_f67jg"]
[ext_resource type="PackedScene" uid="uid://kv4iv5y4u1cr" path="res://scenes/objects/pressure_plate.tscn" id="6_5s7a0"]
[ext_resource type="Texture2D" uid="uid://b8g63xs841foj" path="res://assets/Platformer Art Complete Pack/Base pack/Tiles/signRight.png" id="6_hvv7i"]
[ext_resource type="PackedScene" uid="uid://dteg3pl8btsy5" path="res://scenes/objects/switch.tscn" id="7_80mxj"]
[ext_resource type="Texture2D" uid="uid://da58ouwotoolu" path="res://assets/Platformer Art Complete Pack/Base pack/Tiles/signExit.png" id="8_dngjb"]

[node name="Level2" instance=ExtResource("1_ctrng")]
position = Vector2(39, -40)
script = ExtResource("2_an1c6")

[node name="Decor" parent="." index="0"]
position = Vector2(8, -51)

[node name="Plant" type="Sprite2D" parent="Decor" index="0"]
position = Vector2(1006, 648)
texture = ExtResource("2_y3mc7")

[node name="TochLit2" type="Sprite2D" parent="Decor" index="1"]
position = Vector2(532, 166)
texture = ExtResource("4_210nj")

[node name="TochLit3" type="Sprite2D" parent="Decor" index="2"]
position = Vector2(868, 293)
texture = ExtResource("4_210nj")

[node name="PlantPurple" type="Sprite2D" parent="Decor" index="3"]
position = Vector2(278, 305)
texture = ExtResource("5_f67jg")

[node name="SignRight" type="Sprite2D" parent="Decor" index="4"]
position = Vector2(595, 240)
texture = ExtResource("6_hvv7i")

[node name="SignExit" type="Sprite2D" parent="Decor" index="5"]
position = Vector2(816, 645)
texture = ExtResource("8_dngjb")

[node name="TileMap" type="TileMap" parent="." index="1"]
tile_set = ExtResource("3_bopwk")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 524288, 12, 65535, 524288, 12, 131071, 524288, 12, 196607, 524288, 12, 262143, 524288, 12, 327679, 524288, 12, 393215, 524288, 12, 458751, 524288, 12, 524287, 524288, 12, 589823, 524288, 12, 655359, 524288, 12, -65536, 524288, 12, 0, 524288, 12, 262144, 458752, 8, 327680, 524288, 12, 393216, 524288, 12, 458752, 524288, 12, 524288, 524288, 12, 589824, 524288, 12, -65535, 524288, 12, 1, 524288, 12, 262145, 458752, 8, 524289, 458752, 8, 589825, 524288, 12, -65534, 524288, 12, 2, 524288, 12, 524290, 458752, 8, 589826, 524288, 12, -65533, 524288, 12, 3, 524288, 12, 262147, 458752, 8, 524291, 458752, 8, 589827, 524288, 12, -65532, 524288, 12, 4, 524288, 12, 262148, 458752, 8, 524292, 458752, 8, 589828, 524288, 12, -65531, 524288, 12, 5, 524288, 12, 262149, 458752, 8, 524293, 458752, 8, 589829, 524288, 12, -65530, 524288, 12, 6, 524288, 12, 262150, 458752, 8, 327686, 524288, 12, 393222, 524288, 12, 458758, 524288, 12, 524294, 524288, 12, 589830, 524288, 12, -65529, 524288, 12, 7, 524288, 12, 196615, 524288, 2, 262151, 524288, 12, 327687, 524288, 12, 393223, 524288, 12, 458759, 524288, 12, 524295, 524288, 12, 589831, 524288, 12, -65528, 524288, 12, 8, 524288, 12, 196616, 458752, 8, 262152, 524288, 12, 327688, 524288, 12, 589832, 458752, 8, -65527, 524288, 12, 9, 524288, 12, 65545, 524288, 12, 262153, 524288, 12, 327689, 524288, 12, 589833, 458752, 8, -65526, 524288, 12, 10, 524288, 12, 65546, 524288, 12, 327690, 458752, 8, 589834, 458752, 8, -65525, 524288, 12, 11, 524288, 12, 327691, 458752, 8, 589835, 458752, 8, -65524, 524288, 12, 12, 524288, 12, 327692, 458752, 8, 589836, 458752, 8, -65523, 524288, 12, 13, 524288, 12, 65549, 524288, 12, 327693, 458752, 8, 589837, 458752, 8, -65522, 524288, 12, 14, 524288, 12, 65550, 524288, 12, 327694, 458752, 8, 393230, 524288, 12, 458766, 524288, 12, 589838, 458752, 8, -65521, 524288, 12, 15, 524288, 12, 65551, 524288, 12, 327695, 524288, 12, 393231, 524288, 12, 458767, 524288, 12, 524303, 524288, 12, 589839, 524288, 12, -65520, 524288, 12, 16, 524288, 12, 65552, 524288, 12, 131088, 524288, 12, 196624, 524288, 12, 262160, 524288, 12, 327696, 524288, 12, 393232, 524288, 12, 458768, 524288, 12, 524304, 524288, 12, 589840, 524288, 12, -65519, 524288, 12, 17, 524288, 12, 65553, 524288, 12, 131089, 524288, 12, 196625, 524288, 12, 262161, 524288, 12, 327697, 524288, 12, 393233, 524288, 12, 458769, 524288, 12, 524305, 524288, 12, 589841, 524288, 12, 262146, 458752, 8, 327681, 524288, 12, 131087, 524288, 12, 393229, 524288, 12, 196623, 524288, 12, 262159, 524288, 12, 65536, 524288, 12, 65547, 524288, 12, 65548, 524288, 12, 196617, 524288, 268435458)

[node name="Door" parent="DoorLayout" index="0" node_paths=PackedStringArray("destination") instance=ExtResource("4_j0ywj")]
position = Vector2(210, 246)
destination = NodePath("../Door2")

[node name="Door2" parent="DoorLayout" index="1" node_paths=PackedStringArray("destination") instance=ExtResource("4_j0ywj")]
position = Vector2(139, 526)
open = false
destination = NodePath("../Door")

[node name="Door3" parent="DoorLayout" index="2" node_paths=PackedStringArray("destination") instance=ExtResource("4_j0ywj")]
position = Vector2(390, 245)
destination = NodePath("../Door5")

[node name="Door4" parent="DoorLayout" index="3" node_paths=PackedStringArray("destination") instance=ExtResource("4_j0ywj")]
position = Vector2(983, 316)
open = false
destination = NodePath("../Door6")

[node name="Door5" parent="DoorLayout" index="4" node_paths=PackedStringArray("destination") instance=ExtResource("4_j0ywj")]
position = Vector2(769, 316)
open = false
destination = NodePath("../Door3")

[node name="Door6" parent="DoorLayout" index="5" node_paths=PackedStringArray("destination") instance=ExtResource("4_j0ywj")]
position = Vector2(617, 594)
destination = NodePath("../Door4")

[node name="Door7" parent="DoorLayout" index="6" instance=ExtResource("4_j0ywj")]
position = Vector2(903, 594)
final_door = true

[node name="Player" parent="." index="3"]
position = Vector2(68, 233)

[node name="PressurePlate" parent="." index="4" instance=ExtResource("6_5s7a0")]
position = Vector2(236, 525)
pressed = false

[node name="Switch" parent="." index="5" instance=ExtResource("7_80mxj")]
position = Vector2(349, 525)

[node name="PressurePlate2" parent="." index="6" instance=ExtResource("6_5s7a0")]
position = Vector2(700, 595)

[connection signal="toggle" from="PressurePlate" to="." method="_on_pressure_plate_toggle"]
[connection signal="toggle" from="Switch" to="." method="_on_switch_toggle"]
[connection signal="toggle" from="PressurePlate2" to="." method="_on_pressure_plate_2_toggle"]
